# projects

./: README.md
data/sql/: Fictional_Artist_Table.csv  Fictional_Song_Table.csv  Fictional_Stream_Table.csv
helm-charts/mysql/: mysql-secret.yaml
helm-charts/mysql/templates/: mysql-ingress.yaml  mysql-pvc.yaml  mysql-service.yaml
helm/mysql/: values.yaml
helm/mysql/templates/: _helpers.tpl  mysql-deployment.yaml  serviceaccount.yaml
python/api-gateway/: LICENSE.txt  README.md  pyproject.toml
python/api-gateway/src/api_gateway/: __about__.py  __init__.py
python/misc-modules/procucer-consumer/: docx_producer_consumer.py
python/misc-modules/procucer-conusmer/: producer_consumer.py
python/rag-data-uploader/: .gitignore  Dockerfile  README.md  docker-compose-os.yml  docker-compose.yml  pyproject.toml  requirements.txt
python/rag-data-uploader/notebooks/: mapping_demo.ipynb  parsing_model_test.ipynb  upload_data.ipynb  uploader_demo.ipynb
python/rag-data-uploader/requirements/: requirements-lint.py3.11.txt  requirements-types.py3.11.txt  requirements-uploader-develop.txt
python/rag-data-uploader/src/rag_data_uploader/: __init__.py
python/rag-data-uploader/src/rag_data_uploader/uploaders/: __init__.py  base.py  elasticsearch.py  opensearch.py
python/rag-data-uploader/src/rag_data_uploader/utils/: __init__.py  base_mappings.py  exceptions.py  mappings.py  parsing_models.py  regexes.py
sql_scripts/: best_performing_artist_in_own_country.sql  topk_per_country.sql
