[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-gateway"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "David Rommedahl", email = "david.rommedahl@ericsson.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/David Rommedahl/api-gateway#readme"
Issues = "https://github.com/David Rommedahl/api-gateway/issues"
Source = "https://github.com/David Rommedahl/api-gateway"

[tool.hatch.version]
path = "src/api_gateway/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/api_gateway tests}"

[tool.coverage.run]
source_pkgs = ["api_gateway", "tests"]
branch = true
parallel = true
omit = [
  "src/api_gateway/__about__.py",
]

[tool.coverage.paths]
api_gateway = ["src/api_gateway", "*/api-gateway/src/api_gateway"]
tests = ["tests", "*/api-gateway/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
