[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "rag-data-uploader"
description = "A package which implements different classes for interacting with vector stores"
readme = "README.md"
maintainers = [
    {name = "David Rommedahl", email = "david.rommedahl@ericsson.com"}
]
authors = [
    {name = "David Rommedahl", email = "david.rommedahl@ericsson.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic=[
    "version",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>2.0.0",
    "tenacity",
    "tqdm",
]

[tool.hatch.version]
path = "VERSION"
pattern="(?P<version>.+)"

[tool.hatch.build]
only-packages = true

[tool.hatch.env]
requires = [
    "hatch-pip-compile"
]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-constraint = "default"
pip-compile-resolver = "uv"
pip-compile-installer = "uv"

dependencies = [
    "tenacity==8.2.2",
    "httpx==0.27.0",
    "tqdm==4.66.1",
    "pydantic==2.5.2",
]

[tool.hatch.envs.develop]
extra-dependencies = [
    "ipykernel",
]

[tool.uv.pip]
emit-index-annotation = true

[tool.ruff]
line-length = 100
indent-width = 4
include = ["*.py", "*.pyi", "**/pyproject.toml"]
respect-gitignore = true
show-fixes = true
output-format = "grouped"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["rag_data_uploader"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true

[tool.mypy]
files = ["src/"]
plugins = "pydantic.mypy"
